deployment/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-postgres
  name: stellio-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: stellio-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: stellio-postgres
  name: stellio-postgres
spec:
  selector:
    matchLabels:
      app: stellio-postgres
  serviceName: stellio-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: stellio-postgres
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector: {}
      containers:
      - name: stellio-postgres
        image: stellio/stellio-timescale-postgis:14-2.11.1-3.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U $POSTGRES_USER -h localhost
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        # readinessProbe:
        #   exec:
        #     command:
        #     - /bin/sh
        #     - -c
        #     - -e
        #     - |
        #       exec pg_isready -U "postgres" -d "dbname=stellio_search" -h 127.0.0.1 -p 5432
        #       [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
        #   failureThreshold: 6
        #   initialDelaySeconds: 5
        #   periodSeconds: 30
        #   successThreshold: 1
        #   timeoutSeconds: 5
        ports:
        - containerPort: 5432
          name: postgres
        resources: {}
        volumeMounts:
        - name: pg-data
          mountPath: "/var/lib/postgresql/data"
      restartPolicy: Always
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: stellio-postgres-pvc
