deployment/search-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-search-service
  name: search-service
spec:
  type: ClusterIP
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: stellio-search-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-search-service
  name: search-service
spec:
  selector:
    matchLabels:
      app: stellio-search-service
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-search-service
    spec:
      nodeSelector: {}
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: ENVIRONMENT
        - name: APPLICATION_AUTHENTICATION_ENABLED
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_AUTHENTICATION_ENABLED
        - name: STELLIO_SEARCH_DB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SEARCH_DB_DATABASE
        - name: SPRING_FLYWAY_URL
          value: jdbc:postgresql://stellio-postgres/$(STELLIO_SEARCH_DB_DATABASE)
        - name: SPRING_R2DBC_USERNAME
          valueFrom:
            secretKeyRef:
              name: pg-credentials
              key: POSTGRES_USER
        - name: SPRING_R2DBC_PASSWORD
          valueFrom:
            secretKeyRef:
              name: pg-credentials
              key: POSTGRES_PASS
        - name: SPRING_R2DBC_URL
          value: r2dbc:postgresql://stellio-postgres/$(STELLIO_SEARCH_DB_DATABASE)
        - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: KAFKA_URL
        ports:
        - containerPort: 8083
          name: search-service
        image: 'stellio/stellio-search-service:2.8.0'
        imagePullPolicy: IfNotPresent
        name: stellio-search-service
        resources: {}
      restartPolicy: Always
